--- a/src/app/components/game-area/game-area.component.html
+++ b/src/app/components/game-area/game-area.component.html
@@ -1,1 +1,1 @@
-<custom-canvas [idCanvas]="'idCanvas1'" [poligono]="poligono"></custom-canvas>
+<custom-canvas [idCanvas]="'idCanvas1'" [figura]="figura" [grid]='false'></custom-canvas>
