--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: Roboto;
+    src: url('assets/fonts/Roboto-Medium.ttf');
+}
+
+@font-face {
+    font-family: Roboto-Black;
+    src: url('assets/fonts/Roboto-Black.ttf');
+}
+.titulo{
+    text-align: center;
+}
+body{
+    font-family: 'Roboto' !important;
+}
+h1, h2{
+    font-family: 'Roboto-Black' !important;
+}
