--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,6 +11,6 @@
     </ng-container>
     
     <ng-container *ngIf="selecionado=='jogo'">
-        <nivel [nivel]="nivelSelecionado" [numero]="numeroDoNivel"></nivel>
+        <nivel [nivel]="nivelSelecionado" [numero]="numeroDoNivel" (avancarNivel)="proximoNivel($event)"></nivel>
     </ng-container>
 </div>
