--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,6 +13,11 @@
                 <button class="iniciar btn btn-primary btn-lg" (click)="selecionado = 'fim'"><span>RANKING</span></button>
             </div>
         </div>
+        <div class="row justify-content-md-center">
+            <div class="col-md-auto">
+                <button class="iniciar btn btn-primary btn-lg" (click)="selecionado = 'curvas'"><span>CURVAS</span></button>
+            </div>
+        </div>
     </ng-container>
     
     <ng-container *ngIf="selecionado=='jogo'">
@@ -21,5 +26,8 @@
 
     <ng-container *ngIf="selecionado=='fim'">
         <ranking (voltar)="goHome($event)" [numero]="getRespostasCorretas()" [ranking]="ranking"></ranking>
+    </ng-container>
+    <ng-container *ngIf="selecionado=='curvas'">
+        <curvas></curvas>
     </ng-container>
 </div>
