--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,4 +22,7 @@
     <ng-container *ngIf="selecionado=='fim'">
         <ranking (voltar)="goHome($event)" [numero]="getRespostasCorretas()" [ranking]="ranking"></ranking>
     </ng-container>
+
+    <custom-canvas [idCanvas]="'3d'" [figura3d]="arvore3d" [grid]='false' [tamanho]="300"></custom-canvas>
+
 </div>
