--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -18,6 +18,7 @@
                 <button class="iniciar btn btn-primary btn-lg" (click)="selecionado = 'curvas'"><span>CURVAS</span></button>
             </div>
         </div>
+        <custom-canvas [idCanvas]="'3d'" [possuiPoligono]="false" [figura3d]="arvore3d" [grid]='false' [tamanho]="500" [tamanho2]="800"></custom-canvas>
     </ng-container>
     
     <ng-container *ngIf="selecionado=='jogo'">
@@ -31,6 +32,5 @@
         <curvas></curvas>
     </ng-container>
 
-    <custom-canvas [idCanvas]="'3d'" [figura3d]="arvore3d" [grid]='false' [tamanho]="300"></custom-canvas>
 
 </div>
